# streampilot

./: .gitignore  LICENSE  README.fr.md  README.md  README_LICENSE_SECTION.md  pyproject.toml
collect/scripts/: streamhub.py
server/main/: logger.py  server.py
streampilot/: __init__.py  __main__.py  logger.py  server.py
streampilot/collect/scripts/: srt_gateway.py  streamhub.py
streampilot/view/: base.html  dashboard.html  devices.html  gateway_dashboard.html  gateway_route.html
